# aletheia

./: .gitignore  ACCORDS.md  README.md  pyproject.toml  qfca_tsp_solver.py  requirements-dev.txt  requirements.txt  setup.cfg  tutorial.md
docs/architecture/: field_memory_loops.md
docs/philosophy/: aletheia_origin.md
src/aletheia/: __init__.py
src/aletheia/configs/: scaling.yaml
src/aletheia/core/: agency.py  field.py  multifield_engine.py
src/aletheia/experiments/: ablation_adversarial_tests.py  aletheia_curve_fits.py  aletheia_trajectory_viz.py  comprehensive_multi_field_test.py  edge_qubo_multi.py  geodesic_tsp_qfca.py  marletto_vedral_test.py  memory_ablation_test.py  mvt_v2.py  plot_avoidance.ipynb  plot_poly_trajectories.py  plot_system_trajectories.py  proto_avoidance_v02b.py  qubo_test_multi_field.py  run_scaling.py  scaling_utils.py  solve_coupled_system.py  solve_polynomial.py  solve_system.py  test_multifield_engine.py
src/aletheia/experiments/knowledge_tests/: first_test.py  omega_protocol.py
src/aletheia/experiments/multi_field_tsp/: checklist.md  comparison_suite.py  corrected_analysis.md  (+3 more)
src/aletheia/ns-qfca-2d/: run_all_tests.py  test_stability.py
src/aletheia/results/: coupled_system.json  cubic.json  system_mixed.json  system_poly.json
src/aletheia/solvers/: poly_roots.py  system_roots.py
src/core/: affect.py  agency.py  field.py  memory.py
src/experiments/: agency_driven_test.py  aletheia_quantitative_analysis.py  plot_avoidance.ipynb  proto_avoidance.py  proto_avoidance_v02.py  proto_avoidance_v02b.py  temporal_binding_test.py
(+362 files in other folders)
