[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "0.1.0"
description = "Soft-QFT inspired cognitive and field-theoretic computation framework"
readme = "README.md"
authors = [
  { name = "Kunal Garg", email = "kunal@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aletheia*"]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]